@@ -42,11 +42,13 @@ Breaking Changes:
 
 Other Changes:
 
-- Windows: fixed background order of overlapping childs submitted sequentially. (#4493)
+- Windows: Fixed background order of overlapping childs submitted sequentially. (#4493)
 - InputTextMultiline: Fixed label size not being included into window contents rect unless
   the whole widget is clipped.
 - TextUnformatted: Accept null ranges including (NULL,NULL) without asserting, in order to conform
   to common idioms (e.g. passing .data(), .data() + .size() from a null string). (#3615)
+- Nav: Fixed toggling menu layer with Alt or exiting menu layer with Esc not moving mouse when
+  the NavEnableSetMousePos config flag is set.
 - PlotHistogram: Fixed zero-line position when manually specifying min<0 and max>0. (#4349) [@filippocrocchini]
 - IO: Added 'io.WantCaptureMouseUnlessPopupClose' alternative to `io.WantCaptureMouse'. (#4480)
   This allows apps to receive the click on void when that click is used to close popup (by default,
